[gd_scene load_steps=74 format=3 uid="uid://b6y1f688id4ry"]

[ext_resource type="Script" path="res://Scenen/rythm_drum.gd" id="1_1nwh4"]
[ext_resource type="Texture2D" uid="uid://bxqsdqtvxcml0" path="res://Resources/Subway/Drums_Bassdrum_sheet.png" id="2_xtla7"]
[ext_resource type="Texture2D" uid="uid://bge1my7l28r8x" path="res://Resources/Subway/Drums_hihatdrum_sheet.png" id="3_hspfn"]
[ext_resource type="Texture2D" uid="uid://bxrw5gkpgshdd" path="res://Resources/Subway/Drums_Tomdrum_sheet.png" id="4_8pwxm"]
[ext_resource type="Texture2D" uid="uid://dcdlisk4ppfgw" path="res://Resources/Subway/Drums_snaredrum_sheet.png" id="5_1alfp"]
[ext_resource type="Texture2D" uid="uid://c4fkuubhkx2wv" path="res://Resources/Subway/Subway_background.png" id="6_rktbe"]
[ext_resource type="Texture2D" uid="uid://buet2gs40tcse" path="res://Resources/1_extended.png" id="6_yxyy6"]
[ext_resource type="PackedScene" uid="uid://cleust68utvpe" path="res://Scenen/subway_floor.tscn" id="7_s1gic"]
[ext_resource type="PackedScene" uid="uid://xlqhigjagvuk" path="res://Scenen/schienen.tscn" id="9_btfd5"]
[ext_resource type="Texture2D" uid="uid://bmhj0pjku2gi" path="res://Resources/Subway/Drum_hintergrund.png" id="10_2o4qc"]
[ext_resource type="Texture2D" uid="uid://dhy4tqjd1lnwg" path="res://Resources/Witch/B_witch_charge.png" id="10_nxgky"]
[ext_resource type="PackedScene" uid="uid://bia16gx3rct0r" path="res://Scenen/mana_bar.tscn" id="11_su6tt"]
[ext_resource type="Shader" path="res://Scenen/max_mana.gdshader" id="13_0oi8e"]
[ext_resource type="PackedScene" uid="uid://cwdom1ecvrap2" path="res://Scenen/idle_node_2.tscn" id="13_nu4yu"]
[ext_resource type="PackedScene" uid="uid://dh1ihc81uofnc" path="res://Scenen/Idle_node_1.tscn" id="14_g6bhc"]
[ext_resource type="Texture2D" uid="uid://c4aucsjb6r2di" path="res://Resources/Forrest/1.png" id="14_jkjbv"]
[ext_resource type="PackedScene" uid="uid://ch0000o4lyy60" path="res://Scenen/idle_node_3.tscn" id="15_5w30e"]
[ext_resource type="PackedScene" uid="uid://u74e458gexs5" path="res://Scenen/idle_node_4.tscn" id="16_ljmpd"]
[ext_resource type="Texture2D" uid="uid://dhbtwgvau82cl" path="res://Resources/Subway/Idle_nodes.png" id="17_qsc1p"]
[ext_resource type="Texture2D" uid="uid://cvcwxfujqqa8y" path="res://Resources/MV Icons Keyboard/Individual Icons/keyboard_1.png" id="17_rjept"]
[ext_resource type="Texture2D" uid="uid://b064cmi8h1ruu" path="res://Resources/MV Icons Keyboard/Individual Icons/keyboard_102.png" id="18_at2cj"]
[ext_resource type="Texture2D" uid="uid://dbleabg8nti3g" path="res://Resources/MV Icons Keyboard/Individual Icons/keyboard_2.png" id="19_2csgs"]
[ext_resource type="Texture2D" uid="uid://dcergcjlav4bp" path="res://Resources/MV Icons Keyboard/Individual Icons/keyboard_103.png" id="20_2bc5b"]
[ext_resource type="Texture2D" uid="uid://w776sftt81kx" path="res://Resources/MV Icons Keyboard/Individual Icons/keyboard_3.png" id="21_prt0q"]
[ext_resource type="Texture2D" uid="uid://bfihb7d1a8shb" path="res://Resources/MV Icons Keyboard/Individual Icons/keyboard_104.png" id="22_rl87v"]
[ext_resource type="Texture2D" uid="uid://bp0lreuce80e4" path="res://Resources/MV Icons Keyboard/Individual Icons/keyboard_4.png" id="23_ecmr5"]
[ext_resource type="Texture2D" uid="uid://dteth4gtvrday" path="res://Resources/MV Icons Keyboard/Individual Icons/keyboard_105.png" id="24_sl4uy"]
[ext_resource type="PackedScene" uid="uid://cuyd1qv0pn26e" path="res://addons/midi/MidiPlayer.tscn" id="25_n58gw"]
[ext_resource type="PackedScene" uid="uid://bdvkdv77fslji" path="res://addons/midi/ADSR.tscn" id="26_6wmjc"]
[ext_resource type="AudioStream" uid="uid://dm86iw5i101h7" path="res://Resources/Music/SFX/Fail SFX.wav" id="27_05y3b"]
[ext_resource type="AudioStream" uid="uid://xduc438if163" path="res://Resources/Music/Drum_game/DrumGame_124_BackingTrack_v3.wav" id="29_4ngpt"]
[ext_resource type="Script" path="res://Scenen/audio_stream_player_melod.gd" id="30_h846n"]
[ext_resource type="PackedScene" path="res://Scenen/pause_menu_rythm.tscn" id="32_1ceiy"]
[ext_resource type="AudioStream" uid="uid://c3krwq8v76pot" path="res://Resources/Music/Drum_game/DrumGame_124_BackingTrack_v6.wav" id="32_32dnb"]
[ext_resource type="Script" path="res://Scenen/pause_menu_rythm_drum.gd" id="33_s5yee"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c81wc"]
atlas = ExtResource("2_xtla7")
region = Rect2(0, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvouc"]
atlas = ExtResource("2_xtla7")
region = Rect2(300, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwngb"]
atlas = ExtResource("2_xtla7")
region = Rect2(600, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_l77w1"]
atlas = ExtResource("2_xtla7")
region = Rect2(900, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2wex"]
atlas = ExtResource("2_xtla7")
region = Rect2(1200, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_mywwk"]
atlas = ExtResource("2_xtla7")
region = Rect2(1500, 0, 300, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_nerm6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c81wc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvouc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwngb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l77w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2wex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mywwk")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_arx4l"]
atlas = ExtResource("3_hspfn")
region = Rect2(0, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss56r"]
atlas = ExtResource("3_hspfn")
region = Rect2(300, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmhme"]
atlas = ExtResource("3_hspfn")
region = Rect2(600, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkrqj"]
atlas = ExtResource("3_hspfn")
region = Rect2(900, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_056uv"]
atlas = ExtResource("3_hspfn")
region = Rect2(1200, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_llsem"]
atlas = ExtResource("3_hspfn")
region = Rect2(1500, 0, 300, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_v6qxg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_arx4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss56r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmhme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkrqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_056uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llsem")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_n15rw"]
atlas = ExtResource("4_8pwxm")
region = Rect2(0, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qcug"]
atlas = ExtResource("4_8pwxm")
region = Rect2(300, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtmpk"]
atlas = ExtResource("4_8pwxm")
region = Rect2(600, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o38r"]
atlas = ExtResource("4_8pwxm")
region = Rect2(900, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_buyua"]
atlas = ExtResource("4_8pwxm")
region = Rect2(1200, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_de8dj"]
atlas = ExtResource("4_8pwxm")
region = Rect2(1500, 0, 300, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_l3apv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n15rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qcug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtmpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o38r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buyua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de8dj")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_envrh"]
atlas = ExtResource("5_1alfp")
region = Rect2(0, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_13s05"]
atlas = ExtResource("5_1alfp")
region = Rect2(300, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_okad1"]
atlas = ExtResource("5_1alfp")
region = Rect2(600, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk360"]
atlas = ExtResource("5_1alfp")
region = Rect2(900, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3sgt"]
atlas = ExtResource("5_1alfp")
region = Rect2(1200, 0, 300, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_c70xs"]
atlas = ExtResource("5_1alfp")
region = Rect2(1500, 0, 300, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_0urms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_envrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13s05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okad1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk360")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3sgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c70xs")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xwyv5"]
atlas = ExtResource("10_nxgky")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw0bo"]
atlas = ExtResource("10_nxgky")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_do1u5"]
atlas = ExtResource("10_nxgky")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwjcp"]
atlas = ExtResource("10_nxgky")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbfwm"]
atlas = ExtResource("10_nxgky")
region = Rect2(0, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ltqbl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwyv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw0bo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_do1u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwjcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbfwm")
}],
"loop": true,
"name": &"charge",
"speed": 8.0
}]

[sub_resource type="GDScript" id="GDScript_lopwv"]
script/source = "extends TextureProgressBar

@export var value_delta = 0;

func _process(delta: float) -> void:
	value += value_delta;
	value_delta = 0;
"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_xtuev"]
noise_type = 3
frequency = 0.0493
fractal_octaves = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_di7kg"]
noise = SubResource("FastNoiseLite_xtuev")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h718d"]
shader = ExtResource("13_0oi8e")
shader_parameter/time_speed = 1.0
shader_parameter/wave_amplitude = 0.02
shader_parameter/glow_intensity = 0.8
shader_parameter/wave_frequency = 2.933
shader_parameter/base_color = Color(0, 0.274848, 0.567296, 1)
shader_parameter/blue_boost = 0.863
shader_parameter/wave_noise = SubResource("NoiseTexture2D_di7kg")

[node name="BassRythm" type="Node2D"]
script = ExtResource("1_1nwh4")

[node name="Drums" type="Node2D" parent="."]
position = Vector2(-55, 94)

[node name="Bassdrum" type="AnimatedSprite2D" parent="Drums"]
z_index = 1
position = Vector2(1116.17, 504.795)
scale = Vector2(3.01948, 2.97777)
sprite_frames = SubResource("SpriteFrames_nerm6")
frame_progress = 0.743043

[node name="highhat" type="AnimatedSprite2D" parent="Drums"]
position = Vector2(1116.17, 504.795)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_v6qxg")
frame = 5
frame_progress = 1.0

[node name="smoldrum" type="AnimatedSprite2D" parent="Drums"]
position = Vector2(1116.17, 504.795)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_l3apv")
frame = 5
frame_progress = 1.0

[node name="snaredrum" type="AnimatedSprite2D" parent="Drums"]
position = Vector2(1116.17, 504.795)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_0urms")
frame = 5
frame_progress = 1.0

[node name="Hintergrund" type="Node2D" parent="."]
position = Vector2(1759, 804)

[node name="schienen" parent="Hintergrund" instance=ExtResource("9_btfd5")]
z_index = 2
position = Vector2(-1593.52, 346.87)
scale = Vector2(1.99181, 1.28724)

[node name="Subway_floor" parent="Hintergrund" instance=ExtResource("7_s1gic")]
z_index = -2
position = Vector2(-576.52, 239.87)
scale = Vector2(1.23965, 1.40717)

[node name="Background" type="Sprite2D" parent="Hintergrund"]
z_index = -3
position = Vector2(-666.52, -426.133)
scale = Vector2(3.24867, 4.59608)
texture = ExtResource("6_rktbe")

[node name="hintergrund1" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1889.17, 501.795)
scale = Vector2(0.296697, -2.42809)
texture = ExtResource("6_yxyy6")

[node name="Hintergrunnd2" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(1398, 531.293)
scale = Vector2(3.82, -4.48471)
texture = ExtResource("10_2o4qc")
flip_v = true

[node name="Witch" type="AnimatedSprite2D" parent="."]
position = Vector2(289, 789)
scale = Vector2(8.22917, 9.22917)
sprite_frames = SubResource("SpriteFrames_ltqbl")
animation = &"charge"

[node name="Mana" parent="." instance=ExtResource("11_su6tt")]
z_index = 2
offset_left = 758.0
offset_top = 1037.0
offset_right = 928.0
offset_bottom = 1049.0
scale = Vector2(6.73606, 6.95963)
max_value = 1000.0
value = 24.0
script = SubResource("GDScript_lopwv")
value_delta = 5

[node name="max_mana" type="Sprite2D" parent="."]
visible = false
z_index = 2
material = SubResource("ShaderMaterial_h718d")
position = Vector2(1330.25, 1079)
scale = Vector2(0.591278, 0.0529634)
texture = ExtResource("14_jkjbv")

[node name="IdleNodes" type="Node2D" parent="."]
position = Vector2(1759, 804)

[node name="IdleNode1" parent="IdleNodes" instance=ExtResource("13_nu4yu")]
z_index = 3
mana_inc = 5

[node name="IdleNode2" parent="IdleNodes" instance=ExtResource("14_g6bhc")]
z_index = 3
position = Vector2(80, 0)
mana_inc = 5

[node name="IdleNode3" parent="IdleNodes" instance=ExtResource("15_5w30e")]
z_index = 3
position = Vector2(160, 0)
mana_inc = 5

[node name="IdleNode4" parent="IdleNodes" instance=ExtResource("16_ljmpd")]
z_index = 3
position = Vector2(244, 1)
mana_inc = 5

[node name="Sprite2D" type="Sprite2D" parent="IdleNodes"]
position = Vector2(-368, -295)
scale = Vector2(3.87389, 3.76261)
texture = ExtResource("17_qsc1p")

[node name="Tasten" type="Node2D" parent="."]
position = Vector2(1763, 867)

[node name="1_on" type="Sprite2D" parent="Tasten"]
z_index = 1
texture = ExtResource("17_rjept")

[node name="1_off" type="Sprite2D" parent="Tasten"]
texture = ExtResource("18_at2cj")

[node name="Timer1" type="Timer" parent="Tasten"]
wait_time = 0.3
one_shot = true

[node name="2_on" type="Sprite2D" parent="Tasten"]
z_index = 1
position = Vector2(80, 0)
texture = ExtResource("19_2csgs")

[node name="2_off" type="Sprite2D" parent="Tasten"]
position = Vector2(80, 0)
texture = ExtResource("20_2bc5b")

[node name="Timer2" type="Timer" parent="Tasten"]
wait_time = 0.3
one_shot = true

[node name="3_on" type="Sprite2D" parent="Tasten"]
z_index = 1
position = Vector2(160, 0)
texture = ExtResource("21_prt0q")

[node name="3_off" type="Sprite2D" parent="Tasten"]
position = Vector2(160, 0)
texture = ExtResource("22_rl87v")

[node name="Timer3" type="Timer" parent="Tasten"]
wait_time = 0.3
one_shot = true

[node name="4_on" type="Sprite2D" parent="Tasten"]
z_index = 1
position = Vector2(240, 0)
texture = ExtResource("23_ecmr5")

[node name="4_off" type="Sprite2D" parent="Tasten"]
position = Vector2(240, 0)
texture = ExtResource("24_sl4uy")

[node name="Timer4" type="Timer" parent="Tasten"]
wait_time = 0.3
one_shot = true

[node name="Positions" type="Node2D" parent="."]
position = Vector2(1759, 180)

[node name="Position1" type="Marker2D" parent="Positions"]
position = Vector2(0, 45)

[node name="Position2" type="Marker2D" parent="Positions"]
position = Vector2(80, 45)

[node name="Position3" type="Marker2D" parent="Positions"]
position = Vector2(160, 45)

[node name="Position4" type="Marker2D" parent="Positions"]
position = Vector2(244, 45)

[node name="ADSR" parent="." instance=ExtResource("26_6wmjc")]

[node name="MidiPlayer" parent="." instance=ExtResource("25_n58gw")]
file = "res://Resources/Music/Drum_game/Drum_map_reaper_v16.mid"
playing = true
sequence_per_seconds = 10

[node name="AudioStreamPlayer_failsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("27_05y3b")
bus = &"SFX"

[node name="AudioStreamPlayer_rythm_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("29_4ngpt")
bus = &"Music"

[node name="AudioStreamPlayer_melod" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("32_32dnb")
bus = &"Music"
script = ExtResource("30_h846n")

[node name="Pause" type="CanvasLayer" parent="."]
process_mode = 2

[node name="PauseMenuRythm" parent="Pause" instance=ExtResource("32_1ceiy")]
process_mode = 2
visible = false
script = ExtResource("33_s5yee")

[connection signal="timeout" from="Tasten/Timer1" to="." method="_on_timer_1_timeout"]
[connection signal="timeout" from="Tasten/Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Tasten/Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="Tasten/Timer4" to="." method="_on_timer_4_timeout"]
[connection signal="finished" from="MidiPlayer" to="." method="_on_midi_player_finished"]
[connection signal="midi_event" from="MidiPlayer" to="." method="_on_midi_player_midi_event"]
